--- a/checkin4you/Client/Pages/IT/WithReservationPageIT.razor
+++ b/checkin4you/Client/Pages/IT/WithReservationPageIT.razor
@@ -73,16 +73,20 @@
                                 <RadzenTextBox @bind-Value="@Reservation.Guests.First().Email" Placeholder="E-Mail" Style="width: 33.3%" />
                             </div>
                         </div>
-                        <h4>Compagni di viaggio</h4>
-                        @foreach(var guest in Reservation.Guests.Skip(1))
+                        @if (Reservation.Guests.Count > 1)
                         {
-                            <div class="d-flex">
-                                <div class="d-flex w-100 mb-2">
-                                    <RadzenTextBox @bind-Value="@guest.Name1" Placeholder="Cognome*" class="me-2" Style="width: 33.3%" />
-                                    <RadzenTextBox @bind-Value="@guest.Name2" Placeholder="Nome*" class="me-2" Style="width: 33.3%" />
-                                    <RadzenDatePicker TValue="DateTime?" @bind-Value="@guest.Birthdate" Placeholder="Data di nascita*" DateFormat="dd.MM.yyyy" Style="width: 33.3%" Max="DateTime.Today" />
+                            <h4>Compagni di viaggio</h4>
+                            @foreach (var guest in Reservation.Guests.Skip(1))
+                            {
+                                <div class="d-flex">
+                                    <div class="d-flex w-100 mb-2">
+                                        <RadzenTextBox @bind-Value="@guest.Name1" Placeholder="Cognome*" class="me-2" Style="width: 33.3%" />
+                                        <RadzenTextBox @bind-Value="@guest.Name2" Placeholder="Nome*" class="me-2" Style="width: 33.3%" />
+                                        <RadzenDatePicker TValue="DateTime?" @bind-Value="@guest.Birthdate" Placeholder="Data di nascita*" DateFormat="dd.MM.yyyy" Style="width: 33.3%" class="me-2" Max="DateTime.Today" />
+                                        <RadzenButton Click=@(args => RemoveGuest(@guest)) Icon="close" Style="background-color: #9e2b25;" />
+                                    </div>
                                 </div>
-                            </div>
+                            }
                         }
                         <RadzenButton Style="background-color: #1e1e1e"
                                         Click="@AddGuest">
