--- a/checkin4you/Client/Pages/DE/WithoutReservationPage.razor
+++ b/checkin4you/Client/Pages/DE/WithoutReservationPage.razor
@@ -3,7 +3,7 @@
 
 <div class="d-flex flex-column p-4 vh-100 w-100" style="overflow: auto">
     <div class="d-flex">
-        <div class="d-flex flex-column w-100 @((Reservation != null && Reservation.Idreservations != null && Reservation.Idreservations.Any()) ? "" : "me-4")">
+        <div class="d-flex flex-column w-100">
             <div class="@DisplayNoneCssClass">
                 <RadzenCard class="w-100" Style="background-color: #40A535; color: white; height: fit-content;">
                     <div class="d-flex flex-column align-items-start justify-content-center">
@@ -99,10 +99,37 @@
                     }
                 </RadzenCard>
             }
-            @if(ReservationsLoaded && (Reservation == null || Reservation.Idreservations == null || !Reservation.Idreservations.Any()))
+            @if(ReservationsLoaded && (Reservation == null || Reservation.Idreservations == null || !Reservation.Idreservations.Any()) && CheckedInReservation == null)
             {
                 <RadzenCard class="mt-4">
                     <h1>Keine Buchung gefunden!</h1>
+                </RadzenCard>
+            }
+            @if (ReservationsLoaded && CheckedInReservation != null)
+            {
+                <RadzenCard class="mt-4">
+                    <h1>Sie haben bereits eingecheckt!</h1>
+                    @if (CheckedInReservation.ItemCodes.Count > 1)
+                    {
+                        <h3>Ihre Zimmer sind:</h3>
+                        <div class="d-flex">
+                            @foreach(var room in CheckedInReservation.ItemCodes)
+                            {
+                                <div class="room">
+                                    @room
+                                </div>
+                            }
+                        </div>
+                    }
+                    else
+                    {
+                        <h3>Ihr Zimmer ist:</h3>
+                        <div class="d-flex">
+                            <div class="room">
+                                @CheckedInReservation.ItemCodes.First()
+                            </div>
+                        </div>
+                    }
                 </RadzenCard>
             }
             <div class="d-flex @DisplayNoneCssClass mt-4">
