--- a/checkin4you/Client/Pages/NL/WithReservationPageNL.razor.css
+++ b/checkin4you/Client/Pages/NL/WithReservationPageNL.razor.css
@@ -1,1 +1,9 @@
-﻿
+﻿.room {
+    font-size: 1.5rem;
+    background-color: #1e1e1e;
+    margin: 5px 10px 5px 0px;
+    padding: 10px;
+    text-align: center;
+    border-radius: 10px;
+    color: white;
+}
