--- a/checkin4you/Client/Pages/EN/CheckinPageEN.razor
+++ b/checkin4you/Client/Pages/EN/CheckinPageEN.razor
@@ -5,11 +5,11 @@
         <h1>Do you have a booking number?</h1>
     </div>
     <div class="h-50 d-flex align-items-center justify-content-center">
-        <RadzenButton Style="background-color: #40A535; height: 50%; width: 25%;" Click="@NavigateToWithReservationPage">
+        <RadzenButton Style="background-color: #40A535; height: 50%; width: 25%; min-width: 250px; min-height: 80px;" Click="@NavigateToWithReservationPage">
             YES, I have a booking number!
         </RadzenButton>
         <div style="width: 20%"></div>
-        <RadzenButton Style="background-color: #9e2b25; height: 50%; width: 25%;" Click="@NavigateToWithoutReservationPage">
+        <RadzenButton Style="background-color: #9e2b25; height: 50%; width: 25%; min-width: 250px; min-height: 80px;" Click="@NavigateToWithoutReservationPage">
             NO, I don't have a booking number!
         </RadzenButton>
     </div>
