--- a/checkin4you/Client/Pages/EN/HomePageEN.razor
+++ b/checkin4you/Client/Pages/EN/HomePageEN.razor
@@ -3,15 +3,12 @@
 
 <PageTitle>checkin4you</PageTitle>
 
-<div class="d-flex flex-column p-5 vh-100 bg">
-    <div class="h-75 d-flex flex-column align-items-center justify-content-center text-white fw-bold">
-        <h1>Welcome!</h1>
-        <RadzenImage Path="images/logo.png" Style="width: 800px; height: 500px" />
-    </div>
-    <div class="h-25 d-flex justify-content-center">
-        <RadzenButton Style="background-color: #9e2b25; height: 50%; width: 25%;"
-                      Click="@NavigateToCheckinPage">
-            Check-in now!
-        </RadzenButton>
-    </div>
+<div class="d-flex flex-column align-items-center justify-content-center text-white fw-bold vh-100 bg">
+    <h1 class="mt-5">Welcome!</h1>
+    <img src="images/logo.png" class="logo" />
+    <RadzenButton Style="background-color: #9e2b25; width: 300px; min-width: 300px; height: 100px; min-height: 100px;"
+                  class="mt-4"
+                  Click="@NavigateToCheckinPage">
+        Check-in now!
+    </RadzenButton>
 </div>
