--- a/checkin4you/Client/Pages/NL/CheckinPageNL.razor
+++ b/checkin4you/Client/Pages/NL/CheckinPageNL.razor
@@ -5,11 +5,11 @@
         <h1>Heb je een boekingsnummer?</h1>
     </div>
     <div class="h-50 d-flex align-items-center justify-content-center">
-        <RadzenButton Style="background-color: #40A535; height: 50%; width: 25%;" Click="@NavigateToWithReservationPage">
+        <RadzenButton Style="background-color: #40A535; height: 50%; width: 25%; min-width: 250px; min-height: 80px;" Click="@NavigateToWithReservationPage">
             JA, ik heb een boekingsnummer!
         </RadzenButton>
         <div style="width: 20%"></div>
-        <RadzenButton Style="background-color: #9e2b25; height: 50%; width: 25%;" Click="@NavigateToWithoutReservationPage">
+        <RadzenButton Style="background-color: #9e2b25; height: 50%; width: 25%; min-width: 250px; min-height: 80px;" Click="@NavigateToWithoutReservationPage">
             NEE, ik heb geen boekingsnummer!
         </RadzenButton>
     </div>
