Fix navigation issues

--- a/checkin4you/Client/Shared/NavMenu.razor
+++ b/checkin4you/Client/Shared/NavMenu.razor
@@ -80,6 +80,6 @@
 
     public void NavigateToHome()
     {
-        NavigationManager.NavigateTo("/" + LanguageStateService.CurrentLang + "/home");
+        NavigationManager.NavigateTo("/" + LanguageStateService.CurrentLang);
     }
 }
