--- a/checkin4you/Client/Pages/EN/WithoutReservationPageEN.razor
+++ b/checkin4you/Client/Pages/EN/WithoutReservationPageEN.razor
@@ -71,7 +71,7 @@
                                 <RadzenTextBox @bind-Value="@Reservation.Guests.First().StateName" Placeholder="State*" Style="width: 33.3%" />
                             </div>
                             <div class="d-flex w-100">
-                                <RadzenDatePicker TValue="DateTime?" @bind-Value="@Reservation.Guests.First().Birthdate" Placeholder="Birthdate*" class="me-2" DateFormat="dd.MM.yyyy" Style="width: 33.3%" />
+                                <RadzenDatePicker TValue="DateTime?" @bind-Value="@Reservation.Guests.First().Birthdate" Placeholder="Birthdate*" class="me-2" DateFormat="dd.MM.yyyy" Style="width: 33.3%" Max="DateTime.Today" />
                                 <RadzenTextBox @bind-Value="@Reservation.Guests.First().Phone" Placeholder="Phone number*" class="me-2" Style="width: 33.3%" />
                                 <RadzenTextBox @bind-Value="@Reservation.Guests.First().Email" Placeholder="E-Mail" Style="width: 33.3%" />
                             </div>
