--- a/checkin4you/Client/Pages/EN/CheckedInPageEN.razor
+++ b/checkin4you/Client/Pages/EN/CheckedInPageEN.razor
@@ -9,8 +9,10 @@
                 {
                     <h3>Your room is:</h3>
                     <div class="room-container">
-                        <div class="room">
-                            @Rooms.First()
+                        <div class="room room-single d-flex align-items-center justify-content-center">
+                            <div style="font-size: xxx-large">
+                                @Rooms.First()
+                            </div>
                         </div>
                     </div>
                 }
@@ -47,7 +49,7 @@
         <div class="w-50 ms-0 mt-0 me-4 mb-4">
             <RadzenCard class="d-flex flex-column h-100" Style="background-color: #1e1e1e; color: white">
                 <h3>Breakfast times</h3>
-                <div class="small-heading mb-2">07.00 AM to 11.00 AM</div>
+                <div class="small-heading mb-2">07.00 AM to 09.30 AM</div>
                 <h3>Restaurant opening hours</h3>
                 <div class="d-flex flex-column">
                     <div class="small-heading mb-1">Tuesday to Friday</div>
