--- a/checkin4you/Client/Pages/IT/CheckedInPageIT.razor
+++ b/checkin4you/Client/Pages/IT/CheckedInPageIT.razor
@@ -9,8 +9,10 @@
                 {
                     <h3>La tua stanza è:</h3>
                     <div class="room-container">
-                        <div class="room">
-                            @Rooms.First()
+                        <div class="room room-single d-flex align-items-center justify-content-center">
+                            <div style="font-size: xxx-large">
+                                @Rooms.First()
+                            </div>
                         </div>
                     </div>
                 }
@@ -47,7 +49,7 @@
         <div class="w-50 ms-0 mt-0 me-4 mb-4">
             <RadzenCard class="d-flex flex-column h-100" Style="background-color: #1e1e1e; color: white">
                 <h3>Orari della colazione</h3>
-                <div class="small-heading mb-2">Dalle 07.00 alle 11.00</div>
+                <div class="small-heading mb-2">Dalle 07.00 alle 09.30</div>
                 <h3>Orari di apertura del ristorante</h3>
                 <div class="d-flex flex-column">
                     <div class="small-heading mb-1">Dal martedì al venerdì</div>
