--- a/checkin4you/Client/Pages/NL/CheckedInPageNL.razor
+++ b/checkin4you/Client/Pages/NL/CheckedInPageNL.razor
@@ -9,8 +9,10 @@
                 {
                     <h3>Uw kamer is:</h3>
                     <div class="room-container">
-                        <div class="room">
-                            @Rooms.First()
+                        <div class="room room-single d-flex align-items-center justify-content-center">
+                            <div style="font-size: xxx-large">
+                                @Rooms.First()
+                            </div>
                         </div>
                     </div>
                 }
@@ -47,7 +49,7 @@
         <div class="w-50 ms-0 mt-0 me-4 mb-4">
             <RadzenCard class="d-flex flex-column h-100" Style="background-color: #1e1e1e; color: white">
                 <h3>Ontbijttijden</h3>
-                <div class="small-heading mb-2">07.00 uur tot 11.00 uur</div>
+                <div class="small-heading mb-2">07.00 uur tot 09.30 uur</div>
                 <h3>Openingstijden restaurant</h3>
                 <div class="d-flex flex-column">
                     <div class="small-heading mb-1">dinsdag tot vrijdag</div>
