--- a/checkin4you/Client/Pages/NL/CheckedInPageNL.razor.css
+++ b/checkin4you/Client/Pages/NL/CheckedInPageNL.razor.css
@@ -24,6 +24,11 @@
     border-radius: 10px;
 }
 
+.room-single {
+    width: 100%;
+    height: 100%;
+}
+
 .small-heading {
     font-size: 1rem;
 }
