Add rest days to restaurant opening hours

--- a/checkin4you/Client/Pages/DE/CheckedInPage.razor
+++ b/checkin4you/Client/Pages/DE/CheckedInPage.razor
@@ -58,7 +58,8 @@
                     <div class="small-heading mb-1">Samstag</div>
                     <div class="text mb-1">11.00 bis 14.00 Uhr und 17.00 bis 23.00 Uhr (warme Küche bis 22.00 Uhr)</div>
                     <div class="small-heading mb-1">Sonn- und Feiertage</div>
-                    <div class="text">11.00 bis 14.00 Uhr und 17.00 bis 22.00 Uhr (warme Küche bis 21.00 Uhr)</div>
+                    <div class="text mb-1">11.00 bis 14.00 Uhr und 17.00 bis 22.00 Uhr (warme Küche bis 21.00 Uhr)</div>
+                    <div class="small-heading fw-bold">Montag Ruhetag</div>
                 </div>
             </RadzenCard>
         </div>
