--- a/checkin4you/Client/Pages/EN/CheckedInPageEN.razor
+++ b/checkin4you/Client/Pages/EN/CheckedInPageEN.razor
@@ -58,6 +58,7 @@
                     <div class="text mb-1">11.00 AM to 2.00 PM and 5.00 PM to 10.30 PM Uhr (kitchen closes 10.00 PM)</div>
                     <div class="small-heading mb-1">Sundays and holidays</div>
                     <div class="text">11.00 AM to 2.00 PM and 5.00 PM to 10.00 PM (kitchen closes 9.00 PM)</div>
+                    <div class="small-heading fw-bold">Mondays closed</div>
                 </div>
             </RadzenCard>
         </div>
