--- a/checkin4you/Client/Pages/IT/CheckedInPageIT.razor
+++ b/checkin4you/Client/Pages/IT/CheckedInPageIT.razor
@@ -58,6 +58,7 @@
                     <div class="text mb-1">Dalle 11.00 alle 14.00 e dalle 17.00 alle 22.30 (cucina calda fino alle 22.00)</div>
                     <div class="small-heading mb-1">Domeniche e festiv</div>
                     <div class="text">Dalle 11.00 alle 14.00 e dalle 17.00 alle 22.00 (cucina calda fino alle 21.00)</div>
+                    <div class="small-heading fw-bold">Lunedì giorno di riposo</div>
                 </div>
             </RadzenCard>
         </div>
