--- a/checkin4you/Client/Pages/NL/CheckedInPageNL.razor
+++ b/checkin4you/Client/Pages/NL/CheckedInPageNL.razor
@@ -58,6 +58,7 @@
                     <div class="text mb-1">11.00 uur tot 14.00 uur en 17.00 uur tot 22.30 uur Uhr (keuken sluit 22.00 uur)</div>
                     <div class="small-heading mb-1">Zon- en feestdagen</div>
                     <div class="text">11.00 uur tot 14.00 uur en 17.00 uur tot 22.00 uur (keuken sluit 21.00 uur)</div>
+                    <div class="small-heading fw-bold">Maandag rustdag</div>
                 </div>
             </RadzenCard>
         </div>
