--- a/checkin4you/Client/Pages/DE/WithReservationPage.razor
+++ b/checkin4you/Client/Pages/DE/WithReservationPage.razor
@@ -83,16 +83,11 @@
                                     <div class="d-flex w-100 mb-2">
                                         <RadzenTextBox @bind-Value="@guest.Name1" Placeholder="Name*" class="me-2" Style="width: 33.3%" />
                                         <RadzenTextBox @bind-Value="@guest.Name2" Placeholder="Vorname*" class="me-2" Style="width: 33.3%" />
-                                        <RadzenDatePicker TValue="DateTime?" @bind-Value="@guest.Birthdate" Placeholder="Geburtsdatum*" DateFormat="dd.MM.yyyy" Style="width: 33.3%" class="me-2" Max="DateTime.Today" />
-                                        <RadzenButton Click=@(args => RemoveGuest(@guest)) Icon="close" Style="background-color: #9e2b25;" />
+                                        <RadzenDatePicker TValue="DateTime?" @bind-Value="@guest.Birthdate" Placeholder="Geburtsdatum*" DateFormat="dd.MM.yyyy" Style="width: 33.3%" Max="DateTime.Today" />
                                     </div>
                                 </div>
                             }
                         }
-                        <RadzenButton Style="background-color: #1e1e1e"
-                                        Click="@AddGuest">
-                            Mitreisenden hinzufügen
-                        </RadzenButton>
                     }
                 </RadzenCard>
             }
