--- a/checkin4you/Client/Pages/NL/WithoutReservationPageNL.razor
+++ b/checkin4you/Client/Pages/NL/WithoutReservationPageNL.razor
@@ -85,16 +85,11 @@
                                     <div class="d-flex w-100 mb-2">
                                         <RadzenTextBox @bind-Value="@guest.Name1" Placeholder="Achternaam*" class="me-2" Style="width: 33.3%" />
                                         <RadzenTextBox @bind-Value="@guest.Name2" Placeholder="Naam*" class="me-2" Style="width: 33.3%" />
-                                        <RadzenDatePicker TValue="DateTime?" @bind-Value="@guest.Birthdate" Placeholder="Geboortedatum*" DateFormat="dd.MM.yyyy" Style="width: 33.3%" class="me-2" Max="DateTime.Today" />
-                                        <RadzenButton Click=@(args => RemoveGuest(@guest)) Icon="close" Style="background-color: #9e2b25;" />
+                                        <RadzenDatePicker TValue="DateTime?" @bind-Value="@guest.Birthdate" Placeholder="Geboortedatum*" DateFormat="dd.MM.yyyy" Style="width: 33.3%" Max="DateTime.Today" />
                                     </div>
                                 </div>
                             }
                         }
-                        <RadzenButton Style="background-color: #1e1e1e"
-                                        Click="@AddGuest">
-                            Gast toevoegen
-                        </RadzenButton>
                     }
                 </RadzenCard>
             }
