--- a/checkin4you/Client/Pages/NL/WithReservationPageNL.razor
+++ b/checkin4you/Client/Pages/NL/WithReservationPageNL.razor
@@ -51,7 +51,7 @@
                         </div>
                     }
                                               
-                    @if(Reservation.Guests != null && Reservation.Guests.Count() > 0)
+                    @if((Reservation.Guests != null && Reservation.Guests.Count() > 0) || Reservation.GuestCount > 0)
                     {
                         <h4>Hoofdgast</h4>
                         <div class="d-flex flex-column w-100 mb-4">
